QmidiCtl - A MIDI Remote Controller via UDP/IP Multicast
--------------------------------------------------------

ChangeLog


0.6.1  2019-12-22  The Winter'19 Release.

- Provide a default IPv6 address, and feedback to the user
  in the options dialog (after a merge request by plcl aka.
  Pedro López-Cabanillas, while on qmidinet).

- When using ./configure --with-qt=... it is also necessary
  to adjust the PKG_CONFIG_PATH environment variable (also
  by plcl aka. Pedro López-Cabanillas, while on qmidinet).


0.6.0  2019-10-17  An Autumn'19 Release.

- Populate automatically the network interface combo-box
  with detected interface names (after merge request by
  plcl aka. Pedro López-Cabanillas, while on qmidinet).

- Complete rewrite of all the basic network interface code,
  while using the Qt5 framework as far as needed to support
  IPv4 and IPv6 seamless and interchangeably.

- Added alternate yet non-official CMake build option.

- Fix HiDPI display screen effective support (Qt >= 5.6).

- Added left/right swipe gestures to navigate over mixer
  strip pages.

- Make sure compiler flags comply to c++11 as standard.


0.5.5  2019-07-12  A Summer'19 Release.

- Multi-touch/finger support has been introduced.

- Updated for the newer Qt5 development tools (>= 5.13).

- Configure updated to check for qtchooser availability.

- Minor update to Debian packaging control file.


0.5.4  2019-04-11  A Spring-Break'19 Release

- Fix build on linux with musl (according to POSIX.1-2001,
  POSIX.1-2008; PR#3 by Andreas Müller aka. schnitzeltony,
  thanks).

- HiDPI display screen support (Qt >= 5.6).


0.5.3  2019-01-08  An Early Winter'19 Release

- Added proper display names to Command and Control Type
  entry fields on Configure dialog (ie. MIDI controller
  assignments dialog).

- Old deprecated Qt4 build support is no more.

- AppData/AppStream metadata is now settled under an all
  permisssive license (FSFAP); also updated to be the most