@@ -8,8 +8,8 @@ configure:	 Makefile.in configure.ac
 
 clean:
 	@if [ -f Makefile ]; then make clean; fi || true
-	@rm -rvf Makefile configure config.* src/.ui src/.obj src/.moc
-	@rm -rvf src/config.* src/*.pri
+	@rm -rvf Makefile configure config.* src/.ui* src/.obj* src/.moc*
+	@rm -rvf src/config.* src/*.pri src/arm* src/x86* src/lib*.so
 	@rm -rvf src/Makefile src/Makefile.* src/*.mak src/*.mak.*
 	@rm -rvf *.cache *.log *.status *.spec *.mak *.m4 .m4
 	@rm -rvf .qmake.stash src/.qmake.stash
