@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
     <array name="qt_sources">
-        <item>https://download.qt.io/ministro/android/qt5/qt-5.9</item>
+        <item>https://download.qt.io/ministro/android/qt5/qt-5.14</item>
     </array>
 
     <!-- The following is handled automatically by the deployment tool. It should
@@ -11,15 +11,12 @@
         <!-- %%INSERT_EXTRA_LIBS%% -->
     </array>
 
-     <array name="qt_libs">
-         <!-- %%INSERT_QT_LIBS%% -->
-     </array>
-
-    <array name="bundled_in_lib">
-        <!-- %%INSERT_BUNDLED_IN_LIB%% -->
+    <array name="qt_libs">
+        <!-- %%INSERT_QT_LIBS%% -->
     </array>
-    <array name="bundled_in_assets">
-        <!-- %%INSERT_BUNDLED_IN_ASSETS%% -->
+
+    <array name="load_local_libs">
+        <!-- %%INSERT_LOCAL_LIBS%% -->
     </array>
 
 </resources>
