@@ -104,11 +104,18 @@ symbian {
 
 android {
 
+	# variables
+	OBJECTS_DIR = .obj_$${ANDROID_TARGET_ARCH}
+	MOC_DIR     = .moc_$${ANDROID_TARGET_ARCH}
+	UI_DIR      = .ui_$${ANDROID_TARGET_ARCH}
+
 	defineReplace(androidVersionCode) {
 		vlist = $$split(1, ".")
 		for (vitem, vlist): \
 			vcode = "$$first(vcode)$$format_number($$vitem, width=2 zeropad)"
-		contains(ANDROID_TARGET_ARCH, arm64-v8a): varch = 01
+		contains(ANDROID_TARGET_ARCH, x86_64): varch = 03
+		else:contains(ANDROID_TARGET_ARCH, x86): varch = 02
+		else:contains(ANDROID_TARGET_ARCH, arm64-v8a): varch = 01
 		else:contains(ANDROID_TARGET_ARCH, armeabi-v7a): varch = 00
 		return($$first(vcode)$$first(varch))
 	}
@@ -122,4 +129,3 @@ android {
 		android/res/values/libs.xml
 	ANDROID_PACKAGE_SOURCE_DIR = $${PWD}/android
 }
-
