@@ -4,6 +4,13 @@ QmidiCtl - A MIDI Remote Controller via UDP/IP Multicast
 ChangeLog
 
 
+GIT HEAD
+
+- Avoid some touch-events while tracking a swipe gesture.
+
+- Bumped copyright headers into the New Year (2020).
+
+
 0.6.1  2019-12-22  The Winter'19 Release.
 
 - Provide a default IPv6 address, and feedback to the user
